add og, twitter metadata

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,29 @@
       src="https://plausible.io/js/script.outbound-links.js"
     ></script>
     <title>Lit Protocol</title>
+    <meta
+      name="description"
+      content="Lit Protocol is open source, decentralized cryptography for access control, compute, and encryption."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://litprotocol.com/" />
+    <meta property="og:title" content="Lit Protocol" />
+    <meta
+      property="og:description"
+      content="Lit Protocol is open source, decentralized cryptography for access control, compute, and encryption."
+    />
+    <meta property="twitter:site" content="@LitProtocol" />
+    <meta property="twitter:url" content="https://litprotocol.com/" />
+    <meta property="twitter:title" content="Lit Protocol" />
+    <meta
+      property="twitter:description"
+      content="Lit Protocol is open source, decentralized cryptography for access control, compute, and encryption."
+    />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:image:alt"
+      content="Lit Protocol logo and description"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
